// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolButtonFc should handle click event 1`] = `
<kol-button-wc
  _label="Test Button"
/>
`;

exports[`KolButtonFc should hide label when hideLabel is true 1`] = `
<kol-button-wc
  _hidelabel=""
  _label="Test Button"
/>
`;

exports[`KolButtonFc should render correctly 1`] = `
<kol-button-wc
  _label="Test Button"
/>
`;

exports[`KolButtonFc should render with a long tooltip inside a row-reverse flex container 1`] = `
<div style="display: flex; flex-direction: row-reverse; width: 200px;">
  <kol-button-wc _hidelabel="" _icons="codicon codicon-home" _label="This is a very long tooltip text that demonstrates the behavior in a row-reverse layout" variant="primary"></kol-button-wc>
</div>
`;

exports[`KolButtonFc should render with custom class 1`] = `
<kol-button-wc
  _label="Test Button"
  class="custom-class"
/>
`;

exports[`KolButtonFc should render with icons 1`] = `
<kol-button-wc
  _label="Test Button"
/>
`;
